# PP

./: CMakeLists.txt  lecture-01.cpp  lecture-02.cpp  lecture-03.cpp  run.sh
fft/: bit_shuffle.h  entrypoint.cpp  implementations.cpp  implementations.h  tests.cpp
integration/: entrypoint.cpp
lectures/: lecture-01.md  lecture-02.md  lecture-03.md  lecture-04.md  lecture-05.md
matrix/: entrypoint.cpp  mul.cpp  mul.h  sum.cpp  sum.h
parallel_mod/: CMakeLists.txt  entrypoint.cpp  performance.cpp  vector_mod.cpp
parallel_mod/src/: entrypoint.cpp  num_threads.cpp
